syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

service DisbursementProcess {
  rpc acceptDisbursementProcess(DisbursementRequest) returns (DisbursementResponse);
}

message DisbursementRequest {
  string agreement_number = 1;
  google.protobuf.Timestamp payment_date = 2;
}

message DisbursementResponse {
  string message = 1;
}
